cabal-version:       3.0

name:                rocksdb
version:             0.1.0.0
author:              Ricardo Catalinas Jiménez
maintainer:          r@untroubled.be
build-type:          Simple

library
  default-language:    Haskell2010
  ghc-options:         -Wall

  build-tool-depends:  c2hs:c2hs
  include-dirs:        cbits
  c-sources:           cbits/helpers.c
  includes:            rocksdb/c.h helpers.h
  extra-libraries:     rocksdb

  hs-source-dirs:      src
  exposed-modules:     Database.RocksDB.C
                     , Database.RocksDB.Resource
  build-depends:       base ==4.*
                     , bytestring
                     , resourcet

executable rocksdb
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded

  main-is:             Main.hs
  build-depends:       base
                     , bytestring
                     , resourcet
                     , rocksdb
